[tool.poetry]
name = "async-mdp"
version = "0.1.0"
description = ""
authors = ["Adrian Orenstein <adrian.orenstein@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^0.29.1"
numpy = "^1.26.4"
tqdm = "^4.66.2"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
flake8-black = "^0.3.6"
isort = "^5.13.2"
loguru = "^0.7.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
